# Hrisa-Code

./: .dockerignore  .env.example  .env.production  .gitignore  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORS_FIX.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETION.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS_2026-03-04.md  DEPLOY_NOW.md  DOCKER_DEPLOYMENT.md  DOCKER_DEPLOYMENT_SUMMARY.md  DOCKER_QUICKSTART.md  DOCKER_VERIFICATION.md  Dockerfile  Dockerfile.web  FUTURE.md  HRISA.md  INTEGRATIONS.md  LICENSE  LOCAL_DEVELOPMENT.md  MANUAL_TESTS.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PLAN_MODE_FIX.md  PRODUCTION.md  PROMPT_IMPROVEMENTS.md  Q3_PROJECT_PLAN.md  QUALITY_IMPROVEMENTS.md  README.md  READY_TO_TEST.md  RELEASE_NOTES_v0.2.0.md  RENDER_AUTOMATION.md  RENDER_DEPLOYMENT.md  SESSION_SUMMARY.md  SETUP_IMPLEMENTATION_SUMMARY.md  (+26 more)
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_auth_schema.py
docker/: Dockerfile.ollama  entrypoint.sh
docs/: ARCHITECTURE.md  ARCHITECTURE_REORGANIZATION.md  AUTHENTICATION_DEPLOYMENT.md  AUTHENTICATION_OVERVIEW.md  AUTHENTICATION_TESTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER.md  MULTI_MODEL.md  ORCHESTRATORS.md  PHASE1_100_PERCENT_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_FINAL.md  PHASE1_IMPROVEMENTS.md  PHASE1_TEST_RESULTS.md  PROGRESSIVE_ORCHESTRATION.md  PROGRESSIVE_ORCHESTRATION_TEST_RESULTS.md  QUICKSTART.md  SETUP.md  SETUP_SUMMARY.md  TESTING.md  WEB_UI.md
examples/: basic_usage.py  config.example.yaml
examples/taskmanager/: .gitignore  CLEAN_V10.sh  METRICS.md  RUN_TEST.sh  RUN_V10_NOW.md  RUN_V11_NOW.md  RUN_V12_NOW.md  RUN_V13_NOW.md  RUN_V14_NOW.md  SESSION_GUIDE.md  TASK_SIMPLE_CALCULATOR.txt  TASK_TO_PASTE.txt  TEST_EVALUATION.md  TEST_EVALUATION_V10.md  TEST_EVALUATION_V11.md  TEST_EVALUATION_V12.md  TEST_EVALUATION_V13.md  TEST_EVALUATION_V14.md  TEST_EVALUATION_V2.md  TEST_EVALUATION_V3.md  TEST_EVALUATION_V4.md  TEST_EVALUATION_V8.md  TEST_EVALUATION_V9.md  TEST_INSTRUCTIONS_V2.md  TEST_INSTRUCTIONS_V3.md  TEST_INSTRUCTIONS_V4.md  TEST_INSTRUCTIONS_V5.md  V10_PREP.md  V11_SUMMARY.md  V14_PREFLIGHT_STATUS.txt  V8_FIXES_SUMMARY.md  V9_TEST_READY.md  cli.py  db.py  main.py  math_operations.py  models.py  pyproject.toml  test_integration.py  validate_v13.sh
examples/taskmanager/src/: cli.py  cli_command_structure.txt  task_manager.py  task_model.py
examples/taskmanager/src/task_manager/: database.py
examples/taskmanager/task_manager/: cli.py  commands.py  models.py
examples/taskmanager/taskmanager/: cli.py  db.py  models.py
examples/taskmanager/tests/: test_cli.py  test_commands.py  test_integration.py
scripts/: create_admin.py  deploy-to-render.py  deploy-vercel.sh  dev.sh  docker-chat.sh  docker-clean.sh  docker-models.sh  docker-pull-models.sh  docker-start.sh  docker-stop.sh  migrate.sh  monitor-deployment.sh  render-shell-setup.sh  run_migrations.py  setup-git-push.sh  setup-uv.sh  setup-venv.sh  setup-windows.bat  setup-windows.ps1  update-cors.sh  verify-deployment.sh
src/hrisa_code/: __init__.py  cli.py
src/hrisa_code/core/: __init__.py  agent.py  api_orchestrator.py  approval_manager.py  config.py  contributing_orchestrator.py  conversation.py  goal_tracker.py  hrisa_orchestrator.py  interactive.py  loop_detector.py  model_catalog.py  model_router.py  ollama_client.py  progressive_api_orchestrator.py  progressive_contributing_orchestrator.py  progressive_hrisa_orchestrator.py  progressive_readme_orchestrator.py  readme_orchestrator.py  repo_context.py  task_manager.py
src/hrisa_code/core/conversation/: __init__.py  conversation.py  json_repair.py  ollama_client.py
src/hrisa_code/core/interface/: __init__.py  interactive.py
src/hrisa_code/core/memory/: __init__.py  repo_context.py  task_manager.py
src/hrisa_code/core/orchestrators/: __init__.py  api_orchestrator.py  base_orchestrator.py  contributing_orchestrator.py  hrisa_orchestrator.py  progressive_api_orchestrator.py  progressive_base.py  progressive_contributing_orchestrator.py  progressive_hrisa_orchestrator.py  progressive_readme_orchestrator.py  readme_orchestrator.py  template_orchestrator.py
src/hrisa_code/core/planning/: __init__.py  agent.py  approval_manager.py  complexity_detector.py  dynamic_planner.py  loop_detector.py  result_verifier.py  tool_advisor.py
src/hrisa_code/tools/: __init__.py  cli_introspection.py  docker_tools.py  file_operations.py  git_operations.py  network_tools.py  system_tools.py
src/hrisa_code/web/: __init__.py  agent_manager.py  roles.py  server.py
tests/: COMPREHENSIVE_REGRESSION_TESTS.md  REGRESSION_TESTS.md  TESTING_STRATEGY.md  TEST_SUITE_GUIDE.md  __init__.py  smoke_test.sh  test_adaptive_execution.py  test_approval_manager.py  test_cli_introspection.py  test_complexity_detector.py  test_complexity_integration.py  test_complexity_llm.py  test_config.py  test_conversation.py  test_dynamic_planner.py  test_file_operations.py  test_git_operations.py  test_goal_tracker.py  test_integrations.py  test_loop_detector.py  test_ollama_client.py  test_search_files_regex.py  test_task_manager.py  test_tool_advisor.py  test_web_api.py
tests/test-results/: 2025-12-25-final-summary.md  2025-12-25-final-validation-report.md  2025-12-25-post-fix-evaluation.md  2025-12-25-regex-fix-summary.md  2025-12-25-search-investigation.md
(+19 files in other folders)
