[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrisa-code"
version = "0.2.0"
description = "A CLI coding assistant powered by local LLMs via Ollama"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ollama>=0.3.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "mcp>=0.1.0",
    "prompt-toolkit>=3.0.0",
    "questionary>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pygments>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
hrisa = "hrisa_code.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=hrisa_code --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    # CLI and entry points (tested via smoke tests)
    "src/hrisa_code/cli.py",

    # Integration/orchestration code (tested via real runs)
    "src/hrisa_code/core/orchestrators/progressive_*.py",
    "src/hrisa_code/core/orchestrators/readme_orchestrator.py",
    "src/hrisa_code/core/orchestrators/api_orchestrator.py",
    "src/hrisa_code/core/orchestrators/contributing_orchestrator.py",
    "src/hrisa_code/core/orchestrators/hrisa_orchestrator.py",

    # Terminal UI (tested manually)
    "src/hrisa_code/core/interface/interactive.py",

    # Complex analysis code (needs integration tests)
    "src/hrisa_code/core/memory/repo_context.py",
]

[tool.coverage.report]
# Show which files were omitted
skip_covered = false
skip_empty = false
